Compiles spark based on scala 2.11 version